--- a/manifests/services/myip.yaml
+++ b/manifests/services/myip.yaml
@@ -8,6 +8,6 @@ spec:
   selector:
     app.kubernetes.io/name: myip
   ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
+    - protocol: TCP
+      port: 8080
+      targetPort: tcp8080
